--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "http-server",
     "test": "npm run test:html",
     "test:html": "globstar nu-html-checker *.html",
     "init-project": "npm install && npm-run-all init:*",
@@ -39,6 +40,7 @@
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
     "globstar": "^1.0.0",
+    "http-server": "^0.11.1",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
