--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/AnnaLangner/18.8GifSearchEngine#readme",
   "dependencies": {
+    "eslint": "^5.16.0",
     "mkdirp": "^0.5.1",
     "normalize.css": "^8.0.1",
     "superagent": "^3.7.0"
