--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "build": "npm run build:sass && npm run build:autoprefixer",
-    "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
-    "watch": "npm run build && npm-run-all -p watch:*",
+    "watch": "npm-run-all -p watch:*",
     "watch:sassprefixer": "onchange -d 100 sass -- npm run watchsass",
     "watchsass": "npm run build:sass && npm run build:autoprefixer",
     "watch:browser-sync": "browser-sync start --server --files css/*.css *.html"
